kubernetes/service/ampel-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ampel-endpoint
  labels:
    app: ampel-endpoint

spec:
  replicas: 1
  template:
    metadata:
      name: ampel-endpoint
      labels:
        app: ampel-endpoint
    spec:
      containers:
        - name: ampel-service
          image: registry.projectdw.de/ampel-service
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.20"
            limits:
              memory: "2Gi"
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
  selector:
    matchLabels:
      app: ampel-endpoint
