kubernetes/service/ampel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ampel-service
spec:
  selector:
    app: ampel-service
  ports:
    - port: 8080
  type: NodePort
