kubernetes/service/ampel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ampel-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"

    #nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  tls:
    - hosts:
        - ampel.projectdw.de
      secretName: https-ampel-service-ui
  rules:
    - host: ampel.projectdw.de
      http:
        paths:
          - backend:
              service:
                name: ampel-service
                port:
                  number: 8080
            path: "/"
            pathType: "ImplementationSpecific"
